--- a/samad23rdsepassignments/package.json
+++ b/samad23rdsepassignments/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "samad23rdsepassignments",
-  "version": "0.1.0",
-  "private": true,
+  "name": "your-project",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
+    "next": "latest",
+    "react": "18.x",
+    "react-dom": "18.x"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "@types/react": "^18.x",
+    "typescript": "^4.x"
   }
 }
