--- a/samad23rdsepassignments/package.json
+++ b/samad23rdsepassignments/package.json
@@ -13,6 +13,7 @@
     "react-dom": "18.x"
   },
   "devDependencies": {
+    "@types/node": "22.6.1",
     "@types/react": "^18.x",
     "typescript": "^4.x"
   }
