--- a/samad23rdsepassignments/package.json
+++ b/samad23rdsepassignments/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "latest",
+    "postcss": "^8.4.47",
     "react": "18.x",
-    "react-dom": "18.x"
+    "react-dom": "18.x",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@types/node": "22.6.1",
