--- a/samd23rdsepassignment/package.json
+++ b/samd23rdsepassignment/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "samd23rdsepassignment--typescript",
+  "name": "samd23rdsepassignment",
   "version": "0.1.0",
   "private": true,
   "scripts": {
